# bananabot

./: Makefile  bananabot.env  pyproject.toml
.github/workflows/: hadolint.yml  mypy.yml  ruff.yml
infra/scripts/: init_project.py
src/: bot.py  main.py
src/data/: config.py
src/db/: db_api.py  models.py
src/db/db_api/storages/: base.py
src/filters/: text.py
src/handlers/: __init__.py  menu.py  transaction.py
src/handlers/user/: __init__.py  start.py
src/keyboards/default/: consts.py
src/keyboards/inline/: callbacks.py  consts.py
src/states/: user.py
src/utils/: logging.py  process_payments.py
src/web_handlers/: tg_updates.py
