[tool.ruff]
target-version = "py310"
preview = true

[tool.ruff.lint]
select = [
    "E", "F", "B", "UP", "SIM", "N", "YTT", "ANN", "ASYNC", "S", "A", "COM", "C4",
    "DTZ", "T10", "EM", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SLOT", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA",
    "PLC", "PLE", "PLW", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"
]
ignore = ["ANN401", "COM812", "E501", "PLC0414", "RET504", "SIM108"]
unfixable = ["B"]

[tool.ruff.format]
line-ending = "lf"


[tool.poetry]
name = "bananabot"
version = "2.3.0"
description = "Bananashop"
authors = ["many"]
readme = "README.md"

[tool.poetry.scripts]
bananabot = "src.bot:main"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3"
environs = "11.0.0"
redis = "~5.1"
asyncpg = "0.29.0"
pydantic = "~2.9"
structlog = "^24"
aiojobs = "^1"
orjson = "~3.10"
tenacity = "^9"
pytz = "^2024"
aiohttp = "~3.10"
arrow = "^1.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = { extras = ["d"], version = "^24.3.0" }
ruff = ">=0.4"
types-redis = "^4.5.5.2"
isort = "^5.13.2"
types-pytz = "^2023.3.0.1"
types-cachetools = "^5.3.0.7"
deptry = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
